# ro

flexric/: CMakeLists.txt
flexric/examples/xApp/isac_sensing/: README.md  isac_csi.py  isac_doppler_pipeline.py
flexric/src/ric/: msg_handler_ric.c
flexric/src/ric/iApps/: influx.c  redis.c  stdout.c
flexric/src/sm/: CMakeLists.txt
flexric/src/sm/isac_sm/: CMakeLists.txt  isac_sm_agent.c  isac_sm_agent.h  isac_sm_id.h  isac_sm_ric.c  isac_sm_ric.h
flexric/src/sm/isac_sm/dec/: isac_dec_asn.c  isac_dec_asn.h  isac_dec_fb.c  isac_dec_fb.h  isac_dec_generic.h  isac_dec_plain.c  isac_dec_plain.h
flexric/src/sm/isac_sm/enc/: isac_enc_asn.c  isac_enc_asn.h  isac_enc_fb.c  isac_enc_fb.h  isac_enc_generic.h  isac_enc_plain.c  isac_enc_plain.h
flexric/src/sm/isac_sm/ie/: isac_data_ie.c  isac_data_ie.h
flexric/src/sm/isac_sm/test/: CMakeLists.txt  main.c
flexric/src/xApp/: CMakeLists.txt  msg_handler_xapp.c
flexric/test/rnd/: fill_rnd_data_isac.c  fill_rnd_data_isac.h
flexric/test/sm/: CMakeLists.txt
flexric/test/sm/isac_sm/: CMakeLists.txt  main.c
openairinterface5g/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md
openairinterface5g/.github/workflows/: jenkins-dispatch.yml
openairinterface5g/charts/physims-4g/: Chart.yaml
openairinterface5g/ci-scripts/: Jenkinsfile-GitHub-Container  Jenkinsfile-push-local-repo  Jenkinsfile-push-registry  Jenkinsfile-scheduled-run  cls_analysis.py  cls_containerize.py  cls_oai_html.py  datalog_rt_stats.gnb.40.vrtsim.yaml  datalog_rt_stats.ue.40.vrtsim.yaml  main.py  pre-ci-check.sh  ran.py
openairinterface5g/ci-scripts/conf_files/: gnb.band79.106prb.vrtsim.phytest-dora.conf
openairinterface5g/ci-scripts/tests/: analysis.py  deployment.py
openairinterface5g/ci-scripts/tests/test-runner/: run.sh
openairinterface5g/ci-scripts/xml_files/: gnb_phytest_fhi7.2_docker.xml  gnb_phytest_fhi7.2_docker_cacofonix.xml  phytest_vrtsim_40MHz.xml
openairinterface5g/ci-scripts/yaml_files/4g_rfsimulator_fdd_05MHz/: README.md
openairinterface5g/ci-scripts/yaml_files/5g_rfsimulator/: README.md
openairinterface5g/ci-scripts/yaml_files/5g_zmq_radio_1x1_ocudu/: ocudu.yml
openairinterface5g/ci-scripts/yaml_files/5g_zmq_radio_2x2_ocudu/: ocudu.yml
openairinterface5g/ci-scripts/yaml_files/phytest_vrtsim_40MHz/: docker-compose.yaml
openairinterface5g/ci-scripts/yaml_files/sa_fhi_7.2_vvdn_gnb/: README.md
openairinterface5g/common/: 5g_platform_types.h  platform_constants.h
openairinterface5g/common/config/DOC/: config.md
openairinterface5g/common/utils/: bits.h  tuntap_if.c  tuntap_if.h
openairinterface5g/common/utils/DOC/: loader.md
openairinterface5g/common/utils/nr/: nr_common.h
openairinterface5g/common/utils/shm_iq_channel/: shm_td_iq_channel.c
openairinterface5g/common/utils/telnetsrv/: telnetsrv_rrc.c
openairinterface5g/common/utils/tests/: CMakeLists.txt  test_bits.c
openairinterface5g/doc/: 5Gnas.md  Aerial_FAPI_Split_Tutorial.md  Doxyfile  FEATURE_SET.md  GET_SOURCES.md  L2NFAPI_NOS1.md  L2NFAPI_S1.md  LDPC_OFFLOAD_SETUP.md  NR_SA_Tutorial_COTS_UE.md  NR_SA_Tutorial_OAI_nrUE.md  ORAN_FHI7.2_Tutorial.md  RUNMODEM.md  TESTBenches.md  TESTING_OAI_NSA_COTS_UE.md  code-style-contrib.md  doc_best_practices.md  handover-tutorial.md  iqrecordplayer_usage.md
openairinterface5g/doc/RRC/: rrc-dev.md
openairinterface5g/docker/: Dockerfile.base.rhel9  README.md
openairinterface5g/executables/: main_nr_ru.c  nr-gnb.c  nr-oru.c  nr-oru.h  nr-ru.c
openairinterface5g/fronthaul/core/: fh_timer.c  fh_timer.h
openairinterface5g/fronthaul/oru/: oru_fh.c  oru_fh.h  oru_packet_processor.c  oru_packet_processor.h
openairinterface5g/nfapi/open-nFAPI/: README.md
openairinterface5g/openair1/PHY/: defs_nr_UE.h
openairinterface5g/openair1/SCHED_NR/: phy_procedures_nr_gNB.c
openairinterface5g/openair1/SCHED_NR_UE/: fapi_nr_ue_l1.c  phy_procedures_nr_ue.c
openairinterface5g/openair2/COMMON/: mac_messages_def.h  mac_messages_types.h  ngap_messages_def.h  ngap_messages_types.h  rrc_messages_def.h  rrc_messages_types.h  xnap_messages_types.h
openairinterface5g/openair2/E2AP/: CMakeLists.txt  flexric
openairinterface5g/openair2/F1AP/: f1ap_du_paging.c  f1ap_du_paging.h
openairinterface5g/openair2/NR_UE_PHY_INTERFACE/: NR_IF_Module.c
openairinterface5g/openair3/NGAP/: ngap_common.c  ngap_common.h  ngap_gNB.c  ngap_gNB_handlers.c  ngap_gNB_mobility_management.c  ngap_gNB_mobility_management.h  ngap_msg_includes.h
openairinterface5g/openshift/: README.md
openairinterface5g/radio/COMMON/: common_lib.c  common_lib.h
openairinterface5g/radio/fhi_72/: oaioran.c
openairinterface5g/radio/vrtsim/: cirdb_provider.c  cirdb_provider.h  vrtsim.c
openairinterface5g/tests/: CMakeLists.txt
openairinterface5g/tests/nrdlbench/: CMakeLists.txt  dlbench.c  nr-dlbench-functional-test.sh
(+136 files in other folders)
